--- a/src/styles/partials/_props-container.scss
+++ b/src/styles/partials/_props-container.scss
@@ -20,10 +20,10 @@
     img {
       width: 90px;
 
-      &:hover {
-        bottom: 4px;
-        width:94px;
-      }
+      // &:hover {
+      //   bottom: 4px;
+      //   width:94px;
+      // }
     }
   }
 }
