--- a/app/views/layouts/game.html
+++ b/app/views/layouts/game.html
@@ -4,6 +4,8 @@
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
     <title>Mr. Potato Who?</title>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js'></script>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Luckiest+Guy' rel='stylesheet'>
     <link href='https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.min.css' rel='stylesheet'>
     <link href='/app/assets/stylesheets/application.css' rel='stylesheet'>
@@ -136,6 +138,10 @@
       </aside>
       <main class='board'>
         <h1>Mr. Potato Who?</h1>
+        <div id='game-instructions'>
+          <div id='close'>X</div>
+          <h4>You have 3 tries to guess who's the secret potato. Pick an item bellow to help narrow your choices. Feel free to guess by clicking on a tater!</h4>
+        </div>
         <div class='potatoBoard'>
           <div class='bodyFeatures'>
             <img alt='potato-eyes' class='eyes' src='/app/assets/images/eyes.svg'>
@@ -147,28 +153,26 @@
       <div class='props-container'>
         <div class='prop-container'>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/hat.svg'>
+            <img alt=''  class='drag' src='/app/assets/images/hat.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/mustache.svg'>
+            <img alt=''  class='drag' src='/app/assets/images/mustache.svg'>
           </div>
           <div class='prop'>
             <img alt='' class='drag' src='/app/assets/images/bow-tie.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/glasses.svg'>
+            <img alt=''  class='drag' src='/app/assets/images/glasses.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/tattoo.svg'>
+            <img alt=''  class='drag' src='/app/assets/images/tattoo.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/fork.svg'>
+            <img alt=''  class='drag' src='/app/assets/images/fork.svg'>
           </div>
         </div>
       </div>
     </div>
-    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js' type='text/javascript'></script>
-    <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js' type='text/javascript'></script>
     <script src='/app/assets/javascripts/vendor.min.js'></script>
     <script src='/app/assets/javascripts/app.js'></script>
   </body>
