--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -7,11 +7,13 @@
     %link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Luckiest+Guy')
     %link(rel='stylesheet' href='/app/assets/stylesheets/application.css')
   %body
-    .container
+    .index-container
       %header
         %nav
           %h1 Mr. Potato Who?
-      .form-container
+      #flying-pot
+        %img(src="/app/assets/images/potato.png")
+      #form-container
         .login-logo
           %img(src='/app/assets/images/logo.svg' alt='logo')
         %form{:method=>"post"}
@@ -21,7 +23,7 @@
           %input#password{:name => "password", :type => "password"}
           %p#signup
           New User?
-          %a{:href => "signup.haml"} Sign Up!
+          %a{:href => "registration.html"} Sign Up!
           %input#login{:type => "submit", :value => "Login"}
   %script(src='/app/assets/javascripts/vendor.min.js')
   %script(src='/app/assets/javascripts/app.js')
