--- a/src/styles/partials/_registration.scss
+++ b/src/styles/partials/_registration.scss
@@ -1,28 +1,95 @@
-// .container {
-//   background-image: url('/app/assets/images/pattern.png');
-//   width: 100%;
-//   height: 100%;
-// }
-//
-// h1 {
-//   align-items: center;
-//   padding: 20px 0;
-//   font-family: 'Luckiest Guy', cursive;
-// }
-//
-// .form-container {
-//   background: #ddd;
-//   margin: 0 auto;
-//   height: 400px;
-//   width: 30%;
-//   border: 1px solid $brown;
-// }
-//
-// .login-logo {
-//   align-items: center;
-//   width: 100px;
-// }
-//
-// img{
-//   width: 95px;
-// }
+#reg-container {
+  margin: 0 auto;
+  background: url('/app/assets/images/pattern.png');
+  height: 100%;
+  font-family: 'Lato', sans-serif;
+  overflow: auto;
+  box-sizing: border-box;
+
+  header {
+    margin-bottom: 30px;
+    padding: 10px 30px;
+    background: #204471;
+    overflow: hidden;
+  }
+}
+
+
+nav {
+
+  h1 {
+  display: flex;
+  font-size: 60px;
+  justify-content: center;
+  padding: 20px 0;
+  font-family: 'Luckiest Guy', cursive;
+}
+}
+
+#reg-form {
+  background: #ddd;
+  top: 60px;
+  margin: 0 auto;
+  height: 450px;
+  width: 35%;
+  border: 2px solid $brown;
+  border-radius: 10px;
+  padding: 0 3px;
+}
+
+.login-logo {
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 160px;
+  @-ms-keyframes wiggle{0%{-ms-transform:rotate(3deg);}50%{-ms-transform:rotate(-3deg);}100%{-ms-transform:rotate(3deg);}}
+@-moz-keyframes wiggle{0%{-moz-transform:rotate(3deg);}50%{-moz-transform:rotate(-3deg);}100%{-moz-transform:rotate(3deg);}}
+@-webkit-keyframes wiggle{0%{-webkit-transform:rotate(3deg);}50%{-webkit-transform:rotate(-3deg);}100%{-webkit-transform:rotate(3deg);}}
+@keyframes wiggle{0%{transform:rotate(3deg);}50%{transform:rotate(-3deg);}100%{transform:rotate(3deg);}}
+&:hover{-ms-animation:wiggle .3s 2;-moz-animation:wiggle .3s 2;-webkit-animation:wiggle .3s 2;animation:wiggle .3s 2;}
+
+
+}
+
+img{
+  width: 150px;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid $blue ;
+    border-radius: 4px;
+    box-sizing: border-box;
+     &:focus {
+    outline: none ;
+   border:1px solid $red;
+   box-shadow: 0 0 10px $red;
+ }
+}
+
+input[type=submit] {
+    background-color: $red;
+    border-radius: 4px;
+    color: white;
+    font-size: 20px;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    &:hover {
+      background-color: $blue;
+
+
+    }
+}
+#flying-pot {
+    background-image: url('/app/assets/images/potato.png');
+    position: fixed;
+    top:-50px;
+    left:0;
+    width: 200px;
+    height: 200px;
+}
