--- a/app/views/layouts/game.html
+++ b/app/views/layouts/game.html
@@ -19,7 +19,7 @@
           </div>
           <div class='profile'>
             <div class='picture'>
-              <img alt='John' src='/app/assets/images/person.svg'>
+              <img alt='John' src='/app/assets/images/person-batman.svg'>
             </div>
             <div class='name'>Hey, John</div>
             <div class='leaderpage'>Leader Board?</div>
@@ -137,6 +137,14 @@
       <main class='board'>
         <h1>Mr. Potato Who?</h1>
         <div class='potatoBoard'>
+          <div class='propFeatures'>
+            <img alt='glasses' class='glasses' src='/app/assets/images/glasses.svg'>
+            <img alt='hat' class='hat' src='/app/assets/images/hat.svg'>
+            <img alt='bow-tie' class='bow-tie' src='/app/assets/images/bow-tie.svg'>
+            <img alt='mustache' class='mustache' src='/app/assets/images/mustache.svg'>
+            <img alt='tattoo' class='tattoo' src='/app/assets/images/tattoo.svg'>
+            <img alt='fork' class='fork' src='/app/assets/images/fork.svg'>
+          </div>
           <div class='bodyFeatures'>
             <img alt='potato-eyes' class='eyes' src='/app/assets/images/eyes.svg'>
             <img alt='potato-nose' class='nose' src='/app/assets/images/big-nose.svg'>
@@ -147,28 +155,27 @@
       <div class='props-container'>
         <div class='prop-container'>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/hat.svg'>
+            <img alt='' src='/app/assets/images/hat.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/mustache.svg'>
+            <img alt='' src='/app/assets/images/mustache.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/bow-tie.svg'>
+            <img alt='' src='/app/assets/images/bow-tie.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/glasses.svg'>
+            <img alt='' src='/app/assets/images/glasses.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/tattoo.svg'>
+            <img alt='' src='/app/assets/images/tattoo.svg'>
           </div>
           <div class='prop'>
-            <img alt='' class='drag' src='/app/assets/images/fork.svg'>
+            <img alt='' src='/app/assets/images/fork.svg'>
           </div>
         </div>
       </div>
     </div>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js' type='text/javascript'></script>
-    <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js' type='text/javascript'></script>
     <script src='/app/assets/javascripts/vendor.min.js'></script>
     <script src='/app/assets/javascripts/app.js'></script>
   </body>
