--- a/src/styles/partials/_leadership-board.scss
+++ b/src/styles/partials/_leadership-board.scss
@@ -51,7 +51,7 @@
 
   [id="0"] {
     width: 100%;
-    background: #12253E;;
+    background: #497DBD;;
     position: relative;
     border-radius: 10px;
 
