--- a/app/views/layouts/leaderboard.haml
+++ b/app/views/layouts/leaderboard.haml
@@ -7,11 +7,11 @@
     %link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Luckiest+Guy')
     %link(rel='stylesheet' href='/app/assets/stylesheets/application.css')
   %body
-    - topPeople = [{name: 'Jane Doe', img: 'person.svg', total: '1451'}, {name: 'Henry Adams', img: 'person.svg', total: '1451'},
-        {name: 'Lisa Kyle', img: 'person.svg', total: '1451'}, {name: 'Sue James', img: 'person.svg', total: '1451'},
-        {name: 'Ben Smith', img: 'person.svg', total: '1451'}, {name: 'John Doe', img: 'person.svg', total: '1451'},
-        {name: 'Ben Smith', img: 'person.svg', total: '1451'}, {name: 'John Doe', img: 'person.svg', total: '1451'},
-        {name: 'Ben Smith', img: 'person.svg', total: '1451'}, {name: 'John Doe', img: 'person.svg', total: '1451'}]
+    - topPeople = [{name: 'Jane Doe', img: 'person-batman.svg', total: '1451'}, {name: 'Henry Adams', img: 'person-BB.svg', total: '1451'},
+        {name: 'Lisa Kyle', img: 'person-chef.svg', total: '1451'}, {name: 'Sue James', img: 'person-MIB.svg', total: '1451'},
+        {name: 'Ben Smith', img: 'person-starwars.svg', total: '1451'}, {name: 'John Doe', img: 'person-up.svg', total: '1451'},
+        {name: 'Ben Smith', img: 'person-batman.svg', total: '1451'}, {name: 'John Doe', img: 'person-BB.svg', total: '1451'},
+        {name: 'Ben Smith', img: 'person-chef.svg', total: '1451'}, {name: 'John Doe', img: 'person-MIB.svg', total: '1451'}]
     .container
       %header
         %nav
@@ -21,7 +21,7 @@
             .points
           .profile
             .picture
-              %img(src='/app/assets/images/person.svg' alt='John')
+              %img(src='/app/assets/images/person-batman.svg' alt='John')
             .name Hey, John
           .logo
             %img(src='/app/assets/images/logo.svg' alt='logo')
