--- a/app/views/layouts/game.html
+++ b/app/views/layouts/game.html
@@ -18,7 +18,7 @@
           </div>
           <div class='profile'>
             <div class='picture'>
-              <img alt='John' src='/app/assets/images/person-batman.svg'>
+              <img alt='John' src='/app/assets/images/person.svg'>
             </div>
             <div class='name'>Hey, John</div>
             <div class='leaderpage'>Leader Board?</div>
@@ -140,14 +140,6 @@
           <h4>You have 3 tries to guess who's the secret potato. Pick an item bellow to help narrow your choices. Feel free to guess by clicking on a tater!</h4>
         </div>
         <div class='potatoBoard'>
-          <div class='propFeatures'>
-            <img alt='glasses' class='glasses' src='/app/assets/images/glasses.svg'>
-            <img alt='hat' class='hat' src='/app/assets/images/hat.svg'>
-            <img alt='bow-tie' class='bow-tie' src='/app/assets/images/bow-tie.svg'>
-            <img alt='mustache' class='mustache' src='/app/assets/images/mustache.svg'>
-            <img alt='tattoo' class='tattoo' src='/app/assets/images/tattoo.svg'>
-            <img alt='fork' class='fork' src='/app/assets/images/fork.svg'>
-          </div>
           <div class='bodyFeatures'>
             <img alt='potato-eyes' class='eyes' src='/app/assets/images/eyes.svg'>
             <img alt='potato-nose' class='nose' src='/app/assets/images/big-nose.svg'>
@@ -158,27 +150,26 @@
       <div class='props-container'>
         <div class='prop-container'>
           <div class='prop'>
-            <img alt='' src='/app/assets/images/hat.svg'>
+            <img alt='' class='drag' src='/app/assets/images/hat.svg'>
           </div>
           <div class='prop'>
-            <img alt='' src='/app/assets/images/mustache.svg'>
+            <img alt='' class='drag' src='/app/assets/images/mustache.svg'>
           </div>
           <div class='prop'>
-            <img alt='' src='/app/assets/images/bow-tie.svg'>
+            <img alt='' class='drag' src='/app/assets/images/bow-tie.svg'>
           </div>
           <div class='prop'>
-            <img alt='' src='/app/assets/images/glasses.svg'>
+            <img alt='' class='drag' src='/app/assets/images/glasses.svg'>
           </div>
           <div class='prop'>
-            <img alt='' src='/app/assets/images/tattoo.svg'>
+            <img alt='' class='drag' src='/app/assets/images/tattoo.svg'>
           </div>
           <div class='prop'>
-            <img alt='' src='/app/assets/images/fork.svg'>
+            <img alt='' class='drag' src='/app/assets/images/fork.svg'>
           </div>
         </div>
       </div>
     </div>
-    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js' type='text/javascript'></script>
     <script src='/app/assets/javascripts/vendor.min.js'></script>
     <script src='/app/assets/javascripts/app.js'></script>
   </body>
