added responsive CSS

--- a/app/views/layouts/game.html
+++ b/app/views/layouts/game.html
@@ -137,7 +137,8 @@
         <h1>Mr. Potato Who?</h1>
         <div id='game-instructions'>
           <div id='close'>X</div>
-          <h4>You have 3 tries to guess who's the secret potato. Pick an item bellow to help narrow your choices. Feel free to guess by clicking on a tater!</h4>
+          <h1>Game Rules</h1>
+          <h4>1. You have 3 tries to guess who's the secret potato.<br>2. Pick an item bellow to help narrow your choices.<br>3. Feel free to guess by clicking on a tater!</h4>
         </div>
         <div class='potatoBoard'>
           <div class='propFeatures'>
