--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 
 
 /********** Partials ***********/
+@import 'partials/mixins';
 @import 'partials/animation';
 @import 'partials/container';
 @import 'partials/nav';
