--- a/src/styles/partials/_board.scss
+++ b/src/styles/partials/_board.scss
@@ -4,6 +4,9 @@
   margin-left: auto;
   margin-right: auto;
   font-size: 40px;
+  @include media(smallMobile) {
+    width: 100%;
+  };
 
   h1 {
     padding: 20px 0;
@@ -12,23 +15,74 @@
 
   #game-instructions {
     z-index: 4;
-    width: 50%;
     margin: 0 auto;
-    border: 3px solid $blue;
-    border-radius: 10px;
-    background-color: #fff;
+    border: 50px solid $pink;
+    background-color: #497DBD;
     position: absolute;
+    padding: 15px;
+    font-size: 25px;
+    text-align: left;
+    line-height: 40px;
+    font-weight: 100;
+    color: #fff;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    @include media(tablet) {
+      width: 100%;
+    };
+
+    h1 {
+      padding: 20px 0;
+      text-align: center;
+      font-size: 50px;
+      font-weight: 400;
+      font-family: 'Lato', cursive;
+      @include media(smallMobile) {
+        font-size: 40px;
+      };
+    }
+
+    h4 {
+      padding: 25px 0 0 50px;
+      line-height: 65px;
+      font-size: 28px;
+      @include media(tablet) {
+        font-size: 25px;
+      };
+      @include media(mobile) {
+        padding: 25px 0 0 20px;
+        line-height: 55px;
+      };
+      @include media(smallMobile) {
+        padding: 25px 0 0 20px;
+        line-height: 45px;
+        font-size: 20px;
+      };
+    }
 
     #close {
       float: right;
-      width: 5%;
-      color: $red;
-      border: 2px solid $red;
       border-radius: 50%;
-      padding: 3px;
+      padding: 12px 20px;
       margin: 3px;
-      font-size: 20px;
-      transition:  .7s ease-out;
+      font-size: 40px;
+      transition: .7s ease-out;
+      background: $blue;
+      color: #fff;
+      font-weight: 500;
+      position: absolute;
+      right: 30px;
+      top: 25px;
+      @include media(mobile) {
+        float: none;
+        display: block;
+        position: static;
+        width: 65px;
+        margin: 0 auto;
+      };
       &:hover {
         transform: rotate(90deg);
       }
@@ -45,6 +99,12 @@
     position: relative;
     z-index: 1;
     background: #FFF;
+    @include media(desktop) {
+      margin-bottom: 20px;
+    };
+    @include media(smallMobile) {
+      width: 330px;
+    };
 
       .propFeatures {
         .glasses, .bow-tie, .hat, .tattoo, .fork, .mustache {
@@ -56,16 +116,27 @@
           left: 78px;
           top: 102px;
           z-index: 1;
+          @include media(smallMobile) {
+            left: 46px;
+          };
         }
         .hat {
           width: 380px;
           top: -160px;
           left: -3px;
+          @include media(smallMobile) {
+            top: -148px;
+            left: -33px;
+            z-index: 1;
+          };
         }
         .mustache {
           width: 150px;
           bottom: -19px;
           left: 113px;
+          @include media(smallMobile) {
+            left: 82px;
+          };
         }
         .tattoo {
           left: 57px;
@@ -73,6 +144,9 @@
           transform: rotate(-50deg);
           width: 75px;
           opacity: .5;
+          @include media(smallMobile) {
+            left: 31px;
+          };
         }
         .fork {
           width: 235px;
@@ -83,6 +157,9 @@
           bottom: -69px;
           left: 113px;
           width: 150px;
+          @include media(smallMobile) {
+            left: 81px;
+          };
         }
       }
 
@@ -95,12 +172,18 @@
           bottom: 63px;
           right: 144px;
           width: 95px;
+          @include media(smallMobile) {
+            right: 107px;
+          };
         }
 
         .eyes {
           left: 118px;
           bottom: 100px;
           width: 140px;
+          @include media(smallMobile) {
+            left: 87px;
+          };
         }
       }
       .board {
@@ -110,6 +193,10 @@
         z-index: -1;
         bottom: -45px;
         left: 0px;
+        @include media(smallMobile) {
+          bottom: -55px;
+          left: -32px;
+        };
       }
   }
 }
