--- a/app/views/layouts/game.haml
+++ b/app/views/layouts/game.haml
@@ -54,7 +54,8 @@
         %h1 Mr. Potato Who?
         #game-instructions
           #close X
-          %h4 You have 3 tries to guess who's the secret potato. Pick an item bellow to help narrow your choices. Feel free to guess by clicking on a tater!
+          %h1 Game Rules
+          %h4 1. You have 3 tries to guess who's the secret potato.<br>2. Pick an item bellow to help narrow your choices.<br>3. Feel free to guess by clicking on a tater!
         .potatoBoard
           .propFeatures
             %img.glasses(src='/app/assets/images/glasses.svg' alt='glasses')
