--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -4,4 +4,19 @@
       @content;
     }
   }
+  @if $bp == tablet {
+    @media only screen and (max-width: 760px) {
+      @content;
+    }
+  }
+  @if $bp == mobile {
+    @media only screen and (max-width: 570px) {
+      @content;
+    }
+  }
+  @if $bp == smallMobile {
+    @media only screen and (max-width: 495px) {
+      @content;
+    }
+  }
 }
