--- a/src/styles/partials/_nav.scss
+++ b/src/styles/partials/_nav.scss
@@ -2,12 +2,24 @@ nav {
   .totalPoints {
     float: left;
     width: 167px;
+    @include media(mobile) {
+      float: none;
+      display: block;
+      width: 100%;
+      overflow: hidden;
+      text-align: center;
+    };
 
     .total {
       float: left;
       font-size: 18px;
       padding-top: 15px;
       color: #fff;
+      @include media(mobile) {
+        float: none;
+        text-align: center;
+        display: inline-block;
+      };
     }
 
     span {
@@ -19,10 +31,21 @@ nav {
       padding-top: 17px;
       padding-left: 8px;
       color: #fff;
+      @include media(mobile) {
+        float: none;
+        display: inline-block;
+      };
     }
   }
 
   .logo {
+    @include media(mobile) {
+      float: none;
+      display: block;
+      width: 100%;
+      overflow: hidden;
+      padding-top: 15px;
+    };
 
     img {
       width: 80px;
@@ -39,6 +62,13 @@ nav {
   .profile {
     width: 150px;
     float: right;
+    @include media(mobile) {
+      float: none;
+      display: block;
+      width: 100%;
+      overflow: hidden;
+      text-align: center;
+    };
 
     &:hover {
       .leaderpage {
@@ -71,6 +101,10 @@ nav {
       background: #497DBD;
       border-radius: 50%;
       overflow: hidden;
+      @include media(mobile) {
+        float: none;
+        display: inline-block;
+      };
 
       img {
         width: 50px;
@@ -85,6 +119,10 @@ nav {
       padding-top: 15px;
       font-size: 18px;
       color: #fff;
+      @include media(mobile) {
+        float: none;
+        display: inline-block;
+      };
     }
 
     .leaderpage {
